--- a/app/design/frontend/base/default/layout/cdokus.xml
+++ b/app/design/frontend/base/default/layout/cdokus.xml
@@ -29,26 +29,28 @@
  * @desc 	Catalog Product Documents
  * @author      Omar,Muhsin <info@zanbytes.com>
  * @version 	$Id: cdokus.xml 1104 2013-02-18 00:33:21Z muhsin $ $LastChangedBy: muhsin $
- * @copyright 	Copyright (c) 2013 Zanbytes Inc. (http://www.zanbytes.com)
+ * @copyright 	Copyright (c) 2014 Zanbytes Inc. (http://www.zanbytes.com)
  * @license 	http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 -->
-<layout version="0.1.0">  
+<layout version="0.1.0">
     <catalog_product_view>
         <reference name="head">
             <action method="addCss">
                 <stylesheet>cdokus/style.css</stylesheet>
             </action>
-        </reference>        
+        </reference>
         <label>Catalog Product View</label>
-         <!-- Zanbytes_Cdokus -->
+        <!-- Zanbytes_Cdokus -->
         <reference name="product.info.additional">
             <block type="cdokus/download" name="cdokus_download" before="-" template="cdokus/links.phtml">
                 <block type="page/html_wrapper" name="cdokus.download" as="list_before" translate="label">
                     <label>Links</label>
-                    <action method="setMayBeInvisible"><value>1</value></action>
+                    <action method="setMayBeInvisible">
+                        <value>1</value>
+                    </action>
                 </block>
             </block>
         </reference>
-    </catalog_product_view>    
+    </catalog_product_view>
 </layout>
