--- a/app/design/frontend/base/default/template/cdokus/links.phtml
+++ b/app/design/frontend/base/default/template/cdokus/links.phtml
@@ -24,36 +24,38 @@
  * @license     http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 /**
- * @desc 	Catalog Product Documents
+ * @desc    Catalog Product Documents
  * @author      Omar,Muhsin <info@zanbytes.com>
- * @version 	$Id: links.phtml 1104 2013-02-18 00:33:21Z muhsin $ $LastChangedBy: muhsin $
- * @copyright 	Copyright (c) 2013 Zanbytes Inc. (http://www.zanbytes.com)
- * @license 	http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
+ * @version    $Id: links.phtml 1104 2013-02-18 00:33:21Z muhsin $ $LastChangedBy: muhsin $
+ * @copyright    Copyright (c) 2014 Zanbytes Inc. (http://www.zanbytes.com)
+ * @license    http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 ?>
-<?php if(Mage::helper('cdokus')->isAllowed()): ?>
-<div class="box-collateral box-additional cdokus-download">
-    <?php if ($_links = $this->getAllLinks()): ?>
-        <h2><?php echo $this->__('Available Download Links') ?></h2>
-        <table class="data-table" id="cdoku-available-links">
-            <col />
-            <col width="25%" />
-            <tbody>
+<?php if (Mage::helper('cdokus')->isAllowed()): ?>
+    <div class="box-collateral box-additional cdokus-download">
+        <?php if ($_links = $this->getAllLinks()): ?>
+            <h2><?php echo $this->__('Available Download Links') ?></h2>
+            <table class="data-table" id="cdoku-available-links">
+                <col/>
+                <col width="25%"/>
+                <tbody>
                 <?php foreach ($_links as $_link): ?>
                     <tr>
                         <th class="label"><?php echo $this->htmlEscape($this->__($_link->getLabel())) ?></th>
                         <td class="data">
-                            <button onclick="setLocation('<?php echo $this->getDownloadUrl($_link) ?>')" class="button action-link" title="<?php echo $this->__('Download') ?>" type="button">
+                            <button onclick="setLocation('<?php echo $this->getDownloadUrl($_link) ?>')"
+                                    class="button action-link" title="<?php echo $this->__('Download') ?>"
+                                    type="button">
                                 <span>
                                     <span><?php echo $this->__('Download') ?></span>
                                 </span>
-                            </button>                            
+                            </button>
                         </td>
                     </tr>
                 <?php endforeach; ?>
-            </tbody>
-        </table>
-        <script type="text/javascript">decorateTable('cdoku-available-links')</script>
-    <?php endif; ?>
-</div>
-<?php endif;?>
+                </tbody>
+            </table>
+            <script type="text/javascript">decorateTable('cdoku-available-links')</script>
+        <?php endif; ?>
+    </div>
+<?php endif; ?>
